# pico-w-rust-starter-kit

./: .gitignore  69-probe-rs.rules  Cargo.toml  README.md  build.rs  gdb_commands.txt  linux-app-size.sh  linux-debugger-gdb.sh  linux-debugger-openocd.sh  linux-debugger-serial.sh  linux-debugger-upload.sh  linux-mount-pico.sh  linux-upload.sh  windows-debugger-gdb.ps1  windows-debugger-openocd.ps1  windows-debugger-serial.ps1  windows-debugger-upload.ps1
.cargo/: config.toml
src/: config.rs  main.rs
