[package]
name = "pico-webapp"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", path = "./embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.0", path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "./embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "./embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "./embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-net = { version = "0.4.0", path = "./embassy/embassy-net", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.1", path = "./embassy/embassy-futures" }
cyw43 = { path = "./embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { path = "./embassy/cyw43-pio", features = ["defmt", "overclock"] }

defmt = "0.3.8"
defmt-serial = "0.8.0"
fixed = "1.27.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8"
embedded-hal = "1.0.0"

embedded-hal-async = "1.0.0-rc.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3.1" }
static_cell = { version = "2.1.0", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio-proc = "0.2"
pio = "0.2.1"
critical-section = "1.1.2"

[profile.release]
debug = false
opt-level = 's'
lto = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
# Apply default settings to all packages...

[profile.dev.package.micro-ecc-sys]
debug = false
opt-level = 's'

[build]
target = "thumbv6m-none-eabi"

[target.thumbv6m-none-eabi]
#runner = "elf2uf2-rs -d"
runner = 'probe-rs run --chip RP2040 --probe 2e8a:000c:E6614103E763252F'

[env]
DEFMT_LOG = "trace"
